[package]
name = "proton-call"
version = "3.1.2"
license = "MIT"
authors = ["Avery Murray <avery.murray@caverym.xyz>"]
description = "Run any Windows program through Valve's Proton"
repository = "https://github.com/caverym/proton-caller"
readme = "README.md"
keywords = ["wine", "valve", "steam", "proton"]
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
toml = "0.5.8"
jargon-args = "0.2.5"
lliw = "0.2.0"
serde = { version = "1.0.132", features = ["derive"] }
bincode = "1.3.3"
